--- a/app/src/styles/main.scss
+++ b/app/src/styles/main.scss
@@ -37,15 +37,13 @@ body {
 
 .logo {
   grid-column: 1 / -1;
-  display: grid;
+  display: flex;
   grid-gap: 6px;
-  grid-template-columns: 65px 200px;
-  align-items: center;
-  align-self: center;
-  justify-content: center;
-  align-content: center;
+  grid-template-columns: 50px auto;
+  align-items: flex-start;
   color: $color-white;
   text-align: left;
+  position: absolute;
   line-height: $type-xs;
   margin: -50px 0 0 0;
 
@@ -56,14 +54,13 @@ body {
     padding: 4px 0;
     text-decoration: none;
     text-shadow: 0 0 6px $color-black;
-
   }
   span {
     color: $color-white;
     font-size: $type-xxs;
     text-decoration: none;
+    // display: block;
     text-shadow: 0 0 6px $color-black;
-
   }
 
   img {
@@ -76,12 +73,12 @@ body {
     grid-column: 1 / -1;
     display: grid;
     grid-gap: 6px;
-    grid-template-columns: auto 300px;
+    grid-template-columns: 65px auto;
     color: $color-white;
     text-align: left;
     position: absolute;
     line-height: $type-xxs;
-    left: 96px;
+    
     top: 60px;
     text-decoration: none;
     margin: 0 0 0 0;
@@ -165,8 +162,7 @@ body {
   @media (min-width: $break-sm) {
     bottom: 50px;
     top: auto;
-  position: absolute !important;
-
+    position: absolute !important;
   }
 }
 
@@ -422,7 +418,6 @@ h4 {
 }
 
 .profile {
-  
   h1 {
     font-size: $type-h1;
     color: $color-gray-darkest;
@@ -439,7 +434,6 @@ h4 {
     font-weight: $light;
   }
 
-
   @media (min-width: $break-sm) {
     grid-column: 1 / -1;
     display: grid;
@@ -454,19 +448,14 @@ h4 {
       margin: 0;
       font-weight: $light;
     }
-  
+
     h2 {
       font-size: $type-h2;
       color: $color-gray-darker;
       margin: 6px 0 !important;
       font-weight: $light;
     }
-
- 
-
   }
-
-  
 
   img {
     width: 100%;
@@ -481,11 +470,10 @@ h4 {
 
     @media (min-width: $break-sm) {
       font-size: $type-lg;
-    font-weight: $light;
-    line-height: $type-xxl;
+      font-weight: $light;
+      line-height: $type-xxl;
     }
   }
-
 }
 
 .toggle {
@@ -623,22 +611,20 @@ canvas {
   transform: scale(1);
   overflow: visible;
   transition: $transition-boxshadow, $transition-scale !important;
-  
+
   &:hover {
     box-shadow: 12px 12px 12px $color-gray-slight !important;
     transform: scale(1.01) !important;
-    transition:  $transition-scale, $transition-boxshadow !important;
-    
+    transition: $transition-scale, $transition-boxshadow !important;
   }
 
   @media (min-width: $break-sm) {
     width: auto;
-  display: inline-flex;
+    display: inline-flex;
 
     min-width: 200px;
     padding: 12px !important;
     margin: 0 24px 24px 0 !important;
-
   }
 
   h1 {
@@ -750,10 +736,7 @@ canvas {
   strong {
     font-weight: $bold;
   }
-
- 
 }
-
 
 .contain {
   margin: 0 auto;
